--- a/css/styles.css
+++ b/css/styles.css
@@ -293,25 +293,30 @@ body {
     }
     .mayo {
       background: #1a1a1a;
-      padding: 1rem;
+      padding: 2rem;
       margin: auto;
+      width: 800px;
       max-width: 800px;
-      border-radius: 10px;
       color: #fff;
       font-size: 1.2rem;
       text-align: center;
-      border: 2px solid #FFD700;
+      border-top: 2px solid #FFD700;
+      border-bottom: 2px solid #FFD700;
     }
     .extras {
       background: #1a1a1a;
       padding: 2rem;
       margin: auto;
       max-width: 800px;
-      border-radius: 10px;
       color: #fff;
       font-size: 1.1rem;
       text-align: left;
-      border: 2px solid #FFD700;
+      border-top: 2px solid #FFD700;
+      border-bottom: 2px solid #FFD700;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
 
 
